--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,127 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", "Raleway", sans-serif;
     color: #434455;
-    background-color: #E5E5E5;
+    background-color: #FFFFFF;
 }
 
 ul {
-list-style-type: none;}
+    list-style-type: none;}
 
 a {
     text-decoration: none;
 }
 
-.nav-link {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
+.header-design {
+    background-color: #ffffff;
 }
 
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
+    text-transform: uppercase;
+    line-height: 1.17;
+    color: #2e2f42;
+}
+
+.nav-link .link {
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2e2f42;
+}
+
+.nav-link .link:hover, .nav-link .link:focus {
+    font-weight: 500;
+    color: #404bbf;
+}
+
+.nav-link .link:active {
+    font-weight: 500;
+    color: #404bbf;
+}
+
+.address-link .contacts {
+    line-height: 1.5;
+}
+
+.address-link .contacts:hover, .address-link .contacts:focus {
+    color: #404bbf;
+}
+
+.main-section {
+    background-color: #2e2f42;
+}
+
+.main-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    color: #fff;
+}
+
+.order {
+    font-weight: 500;
+    color: #fff;
+    line-height: 1.5;
+    background: #4d5ae5;
+    cursor:pointer;
+}
+
+.order:hover {
+    background: #404bbf;
+}
+
+.second-title {
+    font-weight: 700;
+    font-size: 36px;
+    color: #2e2f42;
+}
+
+.advantage-section .advantage-section-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+}
+
+.main-text {
+    line-height: 1.5;
+}
+
+.team-section {
+    background-color: #f4f4fd;
+}
+
+.team-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+}
+
+.product-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+}
+
+.footer-design {
+    background-color: #2e2f42;
+}
+
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    text-transform: uppercase;
+    color: #f4f4fd;
+}
+
+.footer-text {
+    color: #f4f4fd;
+    line-height: 1.5;
 }
 
 span {
@@ -28,10 +129,4 @@ span {
     font-weight: 700;
     font-size: 18px;
     color: #4D5AE5;
-}
-
-address {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
 }
