--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ a {
     cursor:pointer;
 }
 
-.action-button:hover {
+.action-button:hover, .action-button:focus {
     background-color: #404bbf;
 }
 
@@ -104,6 +104,7 @@ a {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
@@ -118,6 +119,10 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+}
+
+.team-section .second-title {
+    letter-spacing: 0.02em
 }
 
 .team-name {
