--- a/css/styles.css
+++ b/css/styles.css
@@ -121,14 +121,11 @@ a {
     text-transform: capitalize;
 }
 
-.team-section .second-title {
-    letter-spacing: 0.02em
-}
-
 .team-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
